--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,8 +6,7 @@
     <string name="hint_password">Password</string>
     <string name="login_button">Login</string>
 
-    <!-- ADD THIS: missing string referenced by activity_login.xml -->
-    <string name="register_prompt">Don\'t have an account? Register here</string>
+    <string name="register_prompt">Don't have an account? Sign up</string>
 
     <!-- Login Activity Strings -->
     <string name="error_empty_credentials">Enter email and password</string>
